--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,6 +21,7 @@ rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.102", optional = true }
 
 sapling = { path = "../../sapling" }
+hex-literal = "0.2.1"
 
 # primitives
 sp-authority-discovery = { version = "2.0.0-alpha.2", git = "https://github.com/paritytech/substrate.git", rev = "013c1ee167354a08283fb69915fda56a62fee943", default-features = false }
